--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,6 +14,12 @@ data_transformation:
 model_trainer:
     root_dir: [artifacts/model_trainer]
     train_data_path: artifacts/data_transformation/train.csv
-    test_data_path: artifacts/data_transformation/test.csv
     model_name: model.pkl
+    scaler_name: scaler.pkl
+model_evaluation:
+    root_dir: [artifacts/model_evaluation]
+    test_data_path: artifacts/data_transformation/test.csv
+    model_path: artifacts/model_trainer/model.pkl
+    scaler_path: artifacts/model_trainer/scaler.pkl
+    metrics_file_name: artifacts/model_evaluation/metrics.json
     # data_path == unzip_data_dir
